--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "cross-env": "^7.0.2",
+    "prettier": "2.1.2",
     "typescript": "^4.0.3"
   },
   "license": "MIT"
