--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@types/mongodb": "^3.5.27",
     "mongodb": "^3.6.2",
     "next": "latest",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.5.27",
     "@types/next": "^9.0.0",
     "@types/node": "^14.11.8",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "cross-env": "^7.0.2",
