--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "mongodb": "^3.6.2",
     "next": "latest",
     "node-fetch": "^2.6.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
