Use react-webcam

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-webcam": "^5.2.1"
   },
   "devDependencies": {
     "@types/mongodb": "^3.5.27",
